<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView android:id="@+id/query_info_txt"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:textColor="@android:color/white"
              android:textSize="12dp"
              android:text="@string/query_info_txt"
            />
    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5px"
            android:layout_gravity="center_vertical"
            >
        <EditText
                android:id="@+id/input_query_key"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:paddingLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@android:color/white"
                android:background="@drawable/edit_text_style"
                android:layout_toLeftOf="@+id/query__btn"/>
        <Button
                android:id="@+id/query__btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="@string/query"
                android:textColor="@android:color/white"

                android:background="@drawable/button_style"
                />
    </RelativeLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/male_checkbox" android:layout_gravity="center_horizontal"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/female_checkbox"/>
        <!--<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"-->
        <!--android:text="@string/area" android:textColor="@android:color/white"-->
        <!--/>-->
        <Spinner
                android:id="@+id/area_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                >
        </Spinner>
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button
                android:id="@+id/preview__btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/preview"
                android:textColor="@android:color/white"

                android:background="@drawable/button_style"
                />
        <Button
                android:id="@+id/next__btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="30dp"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:background="@drawable/button_style"
                />
    </LinearLayout>

    <ListView
            android:id="@+id/query_data_list_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:cacheColorHint="#00000000">
    </ListView>
</LinearLayout>

