<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dip">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="3dip"/>
        <!--android:src="@drawable/info"-->


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning_title"
                android:textSize="24px"
                android:textColor="#219ac6"
                android:layout_marginLeft="5dip"/>

    </LinearLayout>

    <TextView
            android:id="@+id/text_info"
            android:layout_marginTop="6px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#686767"
            android:textSize="18px"
            android:layout_marginLeft="10dip"
            android:text="@string/warning_info"/>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="80px">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true">

            <Button
                    android:id="@+id/btn_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_style"
                    />
            <Button
                    android:id="@+id/btn_disagree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/disagree"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_style"
                    />
            <!--android:background="@drawable/btn_begin_d"-->


        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
